objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>IDP_Data__c</fullName>
        <label>IDP Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDP_Error_Reason__c</fullName>
        <label>IDP Error Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDP_Product__c</fullName>
        <label>IDP Product</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDP_RFI__c</fullName>
        <label>IDP_RFI</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDP_Status__c</fullName>
        <label>IDP Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Manual Validation Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDP_Summary__c</fullName>
        <label>IDP Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subcontractor_Price_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subcontractor Price Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subcontractor_Price_Flag_Explanation__c</fullName>
        <label>Subcontractor Price Flag Explanation</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <recordTypes>
        <fullName>RCA_Valcourt_Waterproofing</fullName>
        <active>true</active>
        <businessProcess>Valcourt Sales Process Waterproofing</businessProcess>
        <label>RCA Valcourt Waterproofing</label>
    </recordTypes>
</CustomObject>